--- a/projects.html
+++ b/projects.html
@@ -9,3 +9,6 @@ title: Projects
 	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
+
+
+  {% include advertisements.html %}
