--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ title: Projects
 	<ul class="posts">
 
 	  {% for post in site.categories.projects %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
 
