--- a/Blog2.html
+++ b/Blog2.html
@@ -3,13 +3,14 @@ layout: default
 title: Blog2
 ---
 	<h1>{{ page.title }}</h1>
-	
-	  {% for post in site.categories.blog %}
-	    <li>
-        <a href="{% post.permalink %}">{% post.title %}</a>
-        <p>{{ post.excerpt | strip_html | truncatewords:75 }}</p>
-      </li>
-	  {% endfor %}
-			
+
+<ul>
+  {% for post in site.categories.blog %}
+    <li>
+      <a href="{{ post.permalink }}">{{ post.title }}</a>
+      <p>{{ post.excerpt | strip_html | truncatewords:75 }}</p>
+    </li>
+  {% endfor %}
+</ul>			
 
   {% include advertisements.html %}
