--- a/Blog2.html
+++ b/Blog2.html
@@ -7,7 +7,7 @@ title: Blog2
 <ul>
   {% for post in site.categories.blog %}
     <li>
-      <a href="{{ post.permalink }}">{{ post.title }}</a>
+      <span>{{ post.date | date_to_string }}</span> » <a href="{{ post.permalink }}">{{ post.title }}</a>
       <p>{{ post.excerpt | strip_html | truncatewords:75 }}</p>
     </li>
   {% endfor %}
