--- a/vape.html
+++ b/vape.html
@@ -5,6 +5,13 @@ title: Vape
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 
+##Batteries
+	{% for post in site.categories.batteries %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
+
+##All
 	  {% for post in site.categories.vape %}
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
