--- a/vape.html
+++ b/vape.html
@@ -1,17 +1,18 @@
 ---
 layout: default
-title: Vape
+title: Vaping
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
 
-##Batteries
+<H1>Batteries</H1>
 	{% for post in site.categories.batteries %}
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
 
-##All
+<B/><B/>
+<H1>All</H1>
 	  {% for post in site.categories.vape %}
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
