--- a/vaping.html
+++ b/vaping.html
@@ -6,9 +6,41 @@ title: Vaping
 	
 
 <B/><B/>
+<H3>Kits</H3>
+<ul class="posts">
+	{% for post in site.categories.kits %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
+
+<B/><B/>
+<H3>Mods</H3>
+<ul class="posts">
+	{% for post in site.categories.mods %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
+
+<B/><B/>
+<H3>Tanks</H3>
+<ul class="posts">
+	{% for post in site.categories.tanks %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
+
+<B/><B/>
 <H3>Batteries</H3>
 <ul class="posts">
 	{% for post in site.categories.batteries %}
+	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
+
+<B/><B/>
+<H3>Coils</H3>
+<ul class="posts">
+	{% for post in site.categories.coils %}
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
