--- a/vaping.html
+++ b/vaping.html
@@ -45,6 +45,7 @@ title: Vaping
 	  {% endfor %}
 	</ul>
 
+{% comment %}
 <B/><B/>
 <H3>All</H3>
 <ul class="posts">
@@ -52,6 +53,7 @@ title: Vaping
 	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
+{% endcomment %}
 
 
   {% include advertisements.html %}
