--- a/HymnSite/index.html
+++ b/HymnSite/index.html
@@ -12,7 +12,7 @@
             <h1>Believers Hymnbook</h1>
         </header>
         <nav>
-            <input type="text" id="search" placeholder="Search hymns...">
+            <input type="text" id="search" placeholder="Search Phrase or Number">
         </nav>
         <main>
             <ul id="hymn-list">
