--- a/HymnSite/index.html
+++ b/HymnSite/index.html
@@ -13,12 +13,17 @@
         </header>
         <nav>
             <input type="text" id="search" placeholder="Search Phrase or Number">
+            <button id="sort-number">Sort by Number</button>
+            <button id="sort-title">Sort by Title</button>
         </nav>
         <main>
             <ul id="hymn-list">
                 <!-- Hymns will be dynamically inserted here -->
             </ul>
         </main>
+        <footer>
+            <button id="view-favorites">View Favorites</button>
+        </footer>
     </div>
     <script src="scripts.js"></script>
 </body>
