--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <img id="userPhoto" src="Atrion.jpg" alt="User Photo">
     
-    <a href="https://atrion.github.io/" id="userName">Atrion Darnay</a>
     <a href="https://atrion.github.io/" id="userName">Marc MacArthur</a>
-    <div id="links">
+    <a href="https://atrion.github.io/" id="userName">aka Atrion Darnay</a>
+        <div id="links">
         <a class="link" href="https://keybase.io/atrion" target="_blank">Keybase</a>
         <a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank">Facebook</a>
         <a class="link" href="https://www.reddit.com/user/Atrion84" target="_blank">Reddit</a>
