--- a/HymnSite/index.html
+++ b/HymnSite/index.html
@@ -13,8 +13,15 @@
         <button id="sort-number">Sort by Number</button>
         <button id="sort-title">Sort by Title</button>
         <button id="view-favorites">View Favorites</button>
+        <button id="theme-switch">Switch Theme</button>
     </header>
     <ul id="hymn-list"></ul>
+    <footer>
+        <button id="sort-number">Sort by Number</button>
+        <button id="sort-title">Sort by Title</button>
+        <button id="view-favorites">View Favorites</button>
+        <button id="theme-switch">Switch Theme</button>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
