--- a/HymnSite/index.html
+++ b/HymnSite/index.html
@@ -18,12 +18,19 @@
                 <button id="sort-title">Sort by Title</button>
                 <button id="view-favorites">View Favorites</button>
                 <button id="switch-theme">Switch Theme</button>
+                <button id="back-to-list" class="hidden">Back to List</button>
             </div>
         </nav>
         <main>
             <ul id="hymn-list">
                 <!-- Hymns will be dynamically inserted here -->
             </ul>
+            <div id="hymn-detail" class="hidden">
+                <button id="back-to-list-top" class="hidden">Back to List</button>
+                <h2 id="hymn-detail-title"></h2>
+                <p id="hymn-detail-lyrics"></p>
+                <button id="back-to-list-bottom" class="hidden">Back to List</button>
+            </div>
         </main>
         <footer>
             <div class="button-group">
@@ -31,6 +38,7 @@
                 <button id="sort-title-bottom">Sort by Title</button>
                 <button id="view-favorites-bottom">View Favorites</button>
                 <button id="switch-theme-bottom">Switch Theme</button>
+                <button id="back-to-list-footer" class="hidden">Back to List</button>
             </div>
         </footer>
     </div>
