--- a/HymnSite12/index.html
+++ b/HymnSite12/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing Your Way Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -14,11 +15,11 @@
         <nav>
             <input type="text" id="search" placeholder="Search Phrase or Number">
             <div class="button-group">
+                <button id="back-to-list">Back to List</button>
                 <button id="sort-number">Sort by Number</button>
                 <button id="sort-title">Sort by Title</button>
                 <button id="view-favorites">View Favorites</button>
                 <button id="switch-theme">Switch Theme</button>
-                <button id="back-to-list">Back to List</button>
             </div>
         </nav>
         <main>
@@ -32,11 +33,11 @@
         </main>
         <footer>
             <div class="button-group">
+                <button id="back-to-list">Back to List</button>
                 <button id="sort-number-bottom">Sort by Number</button>
                 <button id="sort-title-bottom">Sort by Title</button>
                 <button id="view-favorites-bottom">View Favorites</button>
                 <button id="switch-theme-bottom">Switch Theme</button>
-                <button id="back-to-list-footer">Back to List</button>
             </div>
         </footer>
     </div>
