--- a/HymnSite12/index.html
+++ b/HymnSite12/index.html
@@ -15,11 +15,11 @@
         <nav>
             <input type="text" id="search" placeholder="Search Phrase or Number">
             <div class="button-group">
-                <button id="back-to-list">Back to List</button>
                 <button id="sort-number">Sort by Number</button>
                 <button id="sort-title">Sort by Title</button>
                 <button id="view-favorites">View Favorites</button>
                 <button id="switch-theme">Switch Theme</button>
+                <button id="back-to-list">Back to List</button>
             </div>
         </nav>
         <main>
@@ -33,11 +33,11 @@
         </main>
         <footer>
             <div class="button-group">
-                <button id="back-to-list">Back to List</button>
                 <button id="sort-number-bottom">Sort by Number</button>
                 <button id="sort-title-bottom">Sort by Title</button>
                 <button id="view-favorites-bottom">View Favorites</button>
                 <button id="switch-theme-bottom">Switch Theme</button>
+                <button id="back-to-list-footer">Back to List</button>
             </div>
         </footer>
     </div>
