--- a/HymnSite/index.html
+++ b/HymnSite/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing Your Way Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -18,7 +19,7 @@
                 <button id="sort-title">Sort by Title</button>
                 <button id="view-favorites">View Favorites</button>
                 <button id="switch-theme">Switch Theme</button>
-                <button id="back-to-list" class="hidden">Back to List</button>
+                <button id="back-to-list">Back to List</button>
             </div>
         </nav>
         <main>
@@ -26,10 +27,8 @@
                 <!-- Hymns will be dynamically inserted here -->
             </ul>
             <div id="hymn-detail" class="hidden">
-                <button id="back-to-list-top" class="hidden">Back to List</button>
                 <h2 id="hymn-detail-title"></h2>
                 <p id="hymn-detail-lyrics"></p>
-                <button id="back-to-list-bottom" class="hidden">Back to List</button>
             </div>
         </main>
         <footer>
@@ -38,7 +37,7 @@
                 <button id="sort-title-bottom">Sort by Title</button>
                 <button id="view-favorites-bottom">View Favorites</button>
                 <button id="switch-theme-bottom">Switch Theme</button>
-                <button id="back-to-list-footer" class="hidden">Back to List</button>
+                <button id="back-to-list-footer">Back to List</button>
             </div>
         </footer>
     </div>
