--- a/HymnSite16/index.html
+++ b/HymnSite16/index.html
@@ -41,6 +41,7 @@
             </div>
         </footer>
     </div>
+    <script src="hymns.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
