--- a/BHBHymnSite001/index.html
+++ b/BHBHymnSite001/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Believers Hymn Book</title>
+    <title>Sing Your Way Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Believers Hymn Book</h1>
+            <h1>Sing Your Way Home</h1>
         </header>
         <nav>
             <input type="text" id="search" placeholder="Search Phrase or Number">
@@ -29,6 +29,9 @@
             <div id="hymn-detail" class="hidden">
                 <h2 id="hymn-detail-title"></h2>
                 <p id="hymn-detail-lyrics"></p>
+                <p id="hymn-detail-author"></p>
+                <p id="hymn-detail-meter"></p>
+                <p id="hymn-detail-tune"></p>
             </div>
         </main>
         <footer>
