--- a/Wordle/index.html
+++ b/Wordle/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <h1>Wordle Clone</h1>
         <div id="game"></div>
+        <div id="keyboard">
+            <!-- Keyboard keys will be dynamically generated -->
+        </div>
         <div id="message"></div>
     </div>
     <script src="script.js"></script>
