--- a/Wordle02/index.html
+++ b/Wordle02/index.html
@@ -9,17 +9,19 @@
 <body>
     <div class="container">
         <h1>Wordle Clone</h1>
-        <div id="game"></div>
+        <div id="game-container">
+            <div id="game"></div>
+            <div id="scorecard">
+                <p>Wins: <span id="wins">0</span></p>
+                <p>Losses: <span id="losses">0</span></p>
+                <p>Current Streak: <span id="streak">0</span></p>
+                <p>Max Streak: <span id="maxStreak">0</span></p>
+            </div>
+        </div>
         <div id="keyboard">
             <!-- Keyboard keys will be dynamically generated -->
         </div>
         <div id="message"></div>
-        <div id="scorecard">
-            <p>Wins: <span id="wins">0</span></p>
-            <p>Losses: <span id="losses">0</span></p>
-            <p>Current Streak: <span id="streak">0</span></p>
-            <p>Max Streak: <span id="maxStreak">0</span></p>
-        </div>
     </div>
     <script src="script.js"></script>
 </body>
