--- a/Wordle02/index.html
+++ b/Wordle02/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div id="keyboard">
-            <!-- Keyboard keys will be dynamically generated -->
+            <!-- Official Wordle keyboard layout will be dynamically generated here -->
         </div>
         <div id="message"></div>
     </div>
