--- a/Wordle02/index.html
+++ b/Wordle02/index.html
@@ -9,19 +9,17 @@
 <body>
     <div class="container">
         <h1>Wordle Clone</h1>
-        <div id="game-container">
+        <div class="game-area">
             <div id="game"></div>
             <div id="scorecard">
-                <p>Wins: <span id="wins">0</span></p>
-                <p>Losses: <span id="losses">0</span></p>
-                <p>Current Streak: <span id="streak">0</span></p>
-                <p>Max Streak: <span id="maxStreak">0</span></p>
+                <h2>Scorecard</h2>
+                <p id="wins">Wins: 0</p>
+                <p id="losses">Losses: 0</p>
+                <p id="streak">Current Streak: 0</p>
+                <p id="max-streak">Max Streak: 0</p>
             </div>
         </div>
-        <div id="keyboard">
-            <!-- Official Wordle keyboard layout will be dynamically generated here -->
-        </div>
-        <div id="message"></div>
+        <div id="keyboard"></div>
     </div>
     <script src="script.js"></script>
 </body>
