--- a/BHBHymnSite004/index.html
+++ b/BHBHymnSite004/index.html
@@ -29,6 +29,11 @@
             <div id="hymn-detail" class="hidden">
                 <h2 id="hymn-detail-title"></h2>
                 <p id="hymn-detail-lyrics"></p>
+                <div id="hymn-detail-author"></div>
+                <div id="hymn-detail-meter"></div>
+                <div id="hymn-detail-tuneName"></div>
+                <div id="hymn-detail-chorus"></div>
+                <div id="hymn-detail-addedChorus"></div>
             </div>
         </main>
         <footer>
