--- a/BHBHymnSite005/index.html
+++ b/BHBHymnSite005/index.html
@@ -33,7 +33,7 @@
                 <p id="hymn-detail-tuneName"></p>
                 <p id="hymn-detail-lyrics"></p>
                 <p id="hymn-detail-chorus"></p>
-                <p id="hymn-detail-addedChorus">
+                <p id="hymn-detail-addedChorus"></p>
             </div>
         </main>
         <footer>
