Cleanup, BHB test
Cleaned up no longer needed files, implemented a new test of the BHB, reorganized files

--- a/HymnBook_Top/hymnbook.html
+++ b/HymnBook_Top/hymnbook.html
@@ -13,21 +13,21 @@
         <div class="row">
             <div class="column">
                 <!-- Title for the first image -->
-                <h2>Title 1</h2>
+                <h2>Believers Hymn Book</h2>
                 <!-- Image with button linking to Example 1 -->
-                <img src="image1.jpg" alt="Image 1" class="image">
-                <button onclick="window.location.href='https://example1.com'">Go to Example 1</button>
+                <img src="Believers_Hymn_Book.jpg" alt="Believers Hymn Book" class="image">
+                <button onclick="window.location.href='https://atrion.github.io/HymnBooks/BHB/index.html'">Believers Hymn Book</button>
                 <!-- Link to download PDF -->
-                <a href="https://placeholder.com/download1.pdf" download>Download PDF</a>
+                <a href="https://atrion.github.io/HymnBooks/BHB/BHB.pdf" download>Download PDF</a>
             </div>
             <div class="column">
                 <!-- Title for the second image -->
-                <h2>Title 2</h2>
+                <h2>Songs of Salvation</h2>
                 <!-- Image with button linking to Example 2 -->
-                <img src="image2.jpg" alt="Image 2" class="image">
-                <button onclick="window.location.href='https://example2.com'">Go to Example 2</button>
+                <img src="Songs_of_Salvation_Revised.jpg" alt="Songs of Salvation Revised" class="image">
+                <button onclick="window.location.href='https://atrion.github.io/HymnBooks/SoS/index.html'">Songs of Salvation</button>
                 <!-- Link to download PDF -->
-                <a href="https://placeholder.com/download2.pdf" download>Download PDF</a>
+                <a href="https://atrion.github.io/HymnBooks/SoS/SoS.pdf" download>Download PDF</a>
             </div>
             <div class="column">
                 <!-- Title for the third image -->
