--- a/BHBHymnSite009/index.html
+++ b/BHBHymnSite009/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,12 +29,7 @@
             </ul>
             <div id="hymn-detail" class="hidden">
                 <h2 id="hymn-detail-title"></h2>
-                <p id="hymn-detail-lyrics"></p>
-                <div id="hymn-detail-author"></div>
-                <div id="hymn-detail-meter"></div>
-                <div id="hymn-detail-tuneName"></div>
-                <div id="hymn-detail-chorus"></div>
-                <div id="hymn-detail-addedChorus"></div>
+                <div id="hymn-detail-lyrics"></div>
             </div>
         </main>
         <footer>
