--- a/BHBHymnSite010/index.html
+++ b/BHBHymnSite010/index.html
@@ -29,7 +29,13 @@
             </ul>
             <div id="hymn-detail" class="hidden">
                 <h2 id="hymn-detail-title"></h2>
-                <div id="hymn-detail-lyrics"></div>
+                <p id="hymn-detail-number"></p>
+                <p id="hymn-detail-author"></p>
+                <p id="hymn-detail-meter"></p>
+                <p id="hymn-detail-tuneName"></p>
+                <p id="hymn-detail-lyrics"></p>
+                <p id="hymn-detail-chorus"></p>
+                <p id="hymn-detail-addedChorus"></p>
             </div>
         </main>
         <footer>
