--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 <meta charset="utf-8"/>
 <title>Atrion Darnay</title>
 <link href="style.css" rel="stylesheet"/>
-<link href="favicon.ico" rel="icon" type="image/x-icon">
-</link></head>
+<link href="favicon.ico" rel="icon" type="image/x-icon"/>
+</head>
 <body>
 <img alt="User Photo" id="userPhoto" src="Atrion.jpg"/>
 <a href="https://atrion.github.io/" id="userName">Marc MacArthur</a>
 <a href="https://atrion.github.io/" id="userName">aka Atrion Darnay</a>
 <div id="links">
-<a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Keybase</a>
-<a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank"><img class="icon" src="icons/facebook.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Facebook</a>
-<a class="link" href="https://www.reddit.com/user/Atrion84" target="_blank"><img class="icon" src="icons/reddit.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Reddit</a>
-<a class="link" href="https://github.com/Atrion" target="_blank"><img class="icon" src="icons/github.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Github</a>
-<a class="link" href="https://open.spotify.com/user/atrion-ca" target="_blank"><img class="icon" src="icons/spotify.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Spotify</a>
-<a class="link" href="https://www.instagram.com/atrion1984/" target="_blank"><img class="icon" src="icons/instagram.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Instagram</a>
-<a class="link" href="https://twitter.com/Atrion84" target="_blank"><img class="icon" src="icons/twitter.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Twitter</a>
-<a class="link" href="https://www.tiktok.com/@atrion_darnay" target="_blank"><img class="icon" src="icons/tiktok.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>TikTok</a>
-<a class="link" href="https://www.youtube.com/user/Atrion84" target="_blank"><img class="icon" src="icons/youtube.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Youtube</a>
-<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.svg" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Deviantart</a>
+<a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
+<a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank"><img class="icon" src="icons/facebook.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Facebook</a>
+<a class="link" href="https://www.reddit.com/user/Atrion84" target="_blank"><img class="icon" src="icons/reddit.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Reddit</a>
+<a class="link" href="https://github.com/Atrion" target="_blank"><img class="icon" src="icons/github.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Github</a>
+<a class="link" href="https://open.spotify.com/user/atrion-ca" target="_blank"><img class="icon" src="icons/spotify.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Spotify</a>
+<a class="link" href="https://www.instagram.com/atrion1984/" target="_blank"><img class="icon" src="icons/instagram.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Instagram</a>
+<a class="link" href="https://twitter.com/Atrion84" target="_blank"><img class="icon" src="icons/twitter.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Twitter</a>
+<a class="link" href="https://www.tiktok.com/@atrion_darnay" target="_blank"><img class="icon" src="icons/tiktok.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>TikTok</a>
+<a class="link" href="https://www.youtube.com/user/Atrion84" target="_blank"><img class="icon" src="icons/youtube.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Youtube</a>
+<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Deviantart</a>
 <a class="link" href="" target="_blank"></a>
 </div>
 <!-- Javascript -->
