Contact and Sizing
Added contact info and changed text sizing

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<img alt="User Photo" id="userPhoto" src="Atrion.jpg"/>
-<a href="https://atrion.github.io/" id="userName">Marc MacArthur</a>
-<a href="https://atrion.github.io/" id="userName">aka Atrion Darnay</a>
+<img alt="User Photo" id="userPhoto" src="Atrion.jpg" style="width: 130px; height: 130px;"/>
+<a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">Marc MacArthur</a>
+<a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">aka Atrion Darnay</a><div id="contact-buttons" style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;"><a class="contact-button" href="mailto:atrion@gmail.com"><img class="icon" src="icons/google.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>Gmail</a><a class="contact-button" href="https://wa.me/19023145613"><img class="icon" src="icons/whatsapp.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>WhatsApp</a></div>
 <div id="links">
 <a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
 <a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank"><img class="icon" src="icons/facebook.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Facebook</a>
