--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<img alt="User Photo" id="userPhoto" src="Atrion.jpg" style="width: 150px; height: 150px;"/>
+<img alt="User Photo" id="userPhoto" src="Atrion.jpg" style="width: 170px; height: 170px;"/>
 <a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">Marc MacArthur</a>
 <a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">aka Atrion Darnay</a><div id="contact-buttons" style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;"><a class="contact-button" href="mailto:atrion@gmail.com"><img class="icon" src="icons/google.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>Gmail</a><a class="contact-button" href="https://wa.me/19023145613"><img class="icon" src="icons/whatsapp.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>WhatsApp</a></div>
 <div id="links">
-<a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
+<a class="link" href="https://heaven4sure.com/my-journey-to-christ-marc-macarthur/"><img class="icon" src="icons/bible.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/><b>My Journey to Christ</b></a><a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
 <a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank"><img class="icon" src="icons/facebook.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Facebook</a>
 <a class="link" href="https://www.reddit.com/user/Atrion84" target="_blank"><img class="icon" src="icons/reddit.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Reddit</a>
 <a class="link" href="https://github.com/Atrion" target="_blank"><img class="icon" src="icons/github.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Github</a>
