--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <a class="link" href="https://twitter.com/Atrion84" target="_blank"><img class="icon" src="icons/twitter.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Twitter</a>
 <a class="link" href="https://www.tiktok.com/@atrion_darnay" target="_blank"><img class="icon" src="icons/tiktok.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>TikTok</a>
 <a class="link" href="https://www.youtube.com/user/Atrion84" target="_blank"><img class="icon" src="icons/youtube.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Youtube</a>
-<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Deviantart</a>
+<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Deviantart</a><a class="link" href="https://bsky.app/profile/atrion.bsky.social"><img class="icon" src="icons/bluesky.png" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Bluesky</a><a class="link" href="https://archive.org/details/@atrion84"><img class="icon" src="icons/internetarchive.png" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Internet Archive</a>
 <a class="link" href="" target="_blank"></a>
 </div>
 <!-- Javascript -->
