--- a/index.html
+++ b/index.html
@@ -11,20 +11,39 @@
 <body>
 <img alt="User Photo" id="userPhoto" src="Atrion.jpg" style="width: 170px; height: 170px;"/>
 <a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">Marc MacArthur</a>
-<a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">aka Atrion Darnay</a><div id="contact-buttons" style="display: flex; justify-content: center; gap: 10px; margin-top: 15px;"><a class="contact-button" href="mailto:atrion@gmail.com"><img class="icon" src="icons/google.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>Gmail</a><a class="contact-button" href="https://wa.me/19023145613"><img class="icon" src="icons/whatsapp.png" style="width:20px;height:20px;vertical-align:middle;margin-right:6px;"/>WhatsApp</a></div>
+<a href="https://atrion.github.io/" id="userName" style="font-size: 1.2rem;">aka Atrion Darnay</a>
+
+<div id="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
+<a class="contact-button" href="mailto:atrion@gmail.com"><img class="icon" src="icons/google.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Gmail</a>
+<a class="contact-button" href="https://wa.me/19023145613"><img class="icon" src="icons/whatsapp.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>WhatsApp</a>
+</div>
+
+<!--
+<div id="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
+<a class="contact-button" href=""><img class="icon" src="icons/ink.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Journal</a>
+<a class="contact-button" href=""><img class="icon" src="icons/manifesto.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Manifesto</a>
+</div>
+ -->
+ 
 <div id="links">
-<a class="link" href="https://heaven4sure.com/my-journey-to-christ-marc-macarthur/"><img class="icon" src="icons/bible.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/><b>My Journey to Christ</b></a><a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
+<a class="link" href="https://heaven4sure.com/my-journey-to-christ-marc-macarthur/"><img class="icon" src="icons/bible.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/><b>My Journey to Christ</b></a>
+<a class="link" href="https://keybase.io/atrion" target="_blank"><img class="icon" src="icons/keybase.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Keybase</a>
+<a class="link" href="https://archive.org/details/@atrion84"><img class="icon" src="icons/internetarchive.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Internet Archive</a>
+<a class="link" href="https://github.com/Atrion" target="_blank"><img class="icon" src="icons/github.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Github</a>
 <a class="link" href="https://www.facebook.com/marc.macarthur/" target="_blank"><img class="icon" src="icons/facebook.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Facebook</a>
 <a class="link" href="https://www.reddit.com/user/Atrion84" target="_blank"><img class="icon" src="icons/reddit.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Reddit</a>
-<a class="link" href="https://github.com/Atrion" target="_blank"><img class="icon" src="icons/github.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Github</a>
-<a class="link" href="https://open.spotify.com/user/atrion-ca" target="_blank"><img class="icon" src="icons/spotify.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Spotify</a>
 <a class="link" href="https://www.instagram.com/atrion1984/" target="_blank"><img class="icon" src="icons/instagram.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Instagram</a>
 <a class="link" href="https://twitter.com/Atrion84" target="_blank"><img class="icon" src="icons/twitter.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Twitter</a>
 <a class="link" href="https://www.tiktok.com/@atrion_darnay" target="_blank"><img class="icon" src="icons/tiktok.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>TikTok</a>
 <a class="link" href="https://www.youtube.com/user/Atrion84" target="_blank"><img class="icon" src="icons/youtube.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Youtube</a>
-<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Deviantart</a><a class="link" href="https://bsky.app/profile/atrion.bsky.social"><img class="icon" src="icons/bluesky.png" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Bluesky</a><a class="link" href="https://archive.org/details/@atrion84"><img class="icon" src="icons/internetarchive.png" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Internet Archive</a>
+<a class="link" href="https://www.deviantart.com/atrion" target="_blank"><img class="icon" src="icons/deviantart.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Deviantart</a>
+<a class="link" href="https://bsky.app/profile/atrion.bsky.social"><img class="icon" src="icons/bluesky.png" style="width:20px;height:20px;vertical-align:middle;margin-right:10px;"/>Bluesky</a>
+<a class="link" href="https://open.spotify.com/user/atrion-ca" target="_blank"><img class="icon" src="icons/spotify.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Spotify</a>
+
 <a class="link" href="" target="_blank"></a>
 </div>
+
+
 <!-- Javascript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="index.js"></script>
