--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 </div>
 
 <!--
-<div id="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
-<a class="contact-button" href=""><img class="icon" src="icons/ink.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Journal</a>
-<a class="contact-button" href=""><img class="icon" src="icons/manifesto.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Manifesto</a>
-</div>
+
  -->
+
+<div id="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
+<a class="contact-button" href="https://atrion.github.io/blog"><img class="icon" src="icons/ink.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Journal</a>
+<a class="contact-button" href="https://atrion.github.io/manifesto"><img class="icon" src="icons/manifesto.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Manifesto</a>
+</div>
+
  
 <div id="links">
 <a class="link" href="https://heaven4sure.com/my-journey-to-christ-marc-macarthur/"><img class="icon" src="icons/bible.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/><b>My Journey to Christ</b></a>
