--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div id="contact-buttons" style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
 <a class="contact-button" href="https://atrion.github.io/blog"><img class="icon" src="icons/ink.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Journal</a>
-<a class="contact-button" href="https://atrion.github.io/manifesto"><img class="icon" src="icons/manifesto.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Manifesto</a>
+<a class="contact-button" href="https://discord.com/users/208352414984568842"><img class="icon" src="icons/discord.png" style="width:24px;height:24px;vertical-align:middle;margin-right:10px;border-radius:4px;"/>Discord</a>
 </div>
 
  
