--- a/landing.html
+++ b/landing.html
@@ -86,7 +86,8 @@
   <a href="#content" class="sr-only">Skip to content</a>
   <div class="wrap">
     <header>
-      <img src="assets/images/landing.png" alt="From Gravel Hill" style="height: 2rem;">
+      <img src="assets/images/landing.png" alt="From Gravel Hill" style="max-width: 60%; height: auto;">
+
       <h1>Welcome — I’m Marc MacArthur</h1>
       <p class="lead">This is the hub for my projects. Pick a destination below to explore my Writing, Gospel resources, History Projects and other items hosted on subdomains.</p>
     </header>
@@ -123,6 +124,12 @@
         url: "https://history.fromgravelhill.ca",
         desc: "Local History projects, articles, and resources.",
         subdomain: "History.fromgravelhill.ca"
+      },
+      {
+        name: "About Me",
+        url: "https://about.fromgravelhill.ca",
+        desc: "Where to find me online",
+        subdomain: "about.fromgravelhill.ca"
       }
       // Add more entries here…
     ];
