--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>From Gravel Hill — Marc MacArthur</title>
+  <title>From Gravel Hill</title>
   <meta name="description" content="From Gravel Hill: The hub for Marc MacArthur’s projects, writing, and resources." />
   <meta property="og:title" content="From Gravel Hill" />
   <meta property="og:description" content="The hub for my projects, writing, and resources." />
@@ -88,8 +88,8 @@
     <header>
       <img src="assets/images/landing.png" alt="From Gravel Hill" style="max-width: 60%; height: auto;">
 
-      <h1>Welcome — I’m Marc MacArthur</h1>
-      <p class="lead">This is the hub for my projects. Pick a destination below to explore my Writing, Gospel resources, History Projects and other items hosted on subdomains.</p>
+      <h1>Welcome</h1>
+      <p class="lead">I’m Marc MacArthur, this is the hub for my projects. Pick a destination below to explore my Writing, Gospel resources, History Projects and other items hosted on subdomains.</p>
     </header>
 
     <div class="topbar">
